--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
+```{r, setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# ino <a href="https://loelschlaeger.de/ino/"><img src="man/figures/logo.png" align="right" height="139" /></a>
+# Initialization of numerical optimization <a href="https://loelschlaeger.de/ino/"><img src="man/figures/logo.png" align="right" height="139" /></a>
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/ino)](https://CRAN.R-project.org/package=ino)
@@ -22,14 +22,35 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/loelschlaeger/ino/branch/master/graph/badge.svg)](https://app.codecov.io/gh/loelschlaeger/ino?branch=master)
 <!-- badges: end -->
 
-The {ino} R package implements initialization strategies and analysis tools for numerical optimization of real-valued functions, with a specific focus on likelihood functions of statistical models.
+The `{ino}` R package provides tools designed for the analysis of the initialization for numerical optimization. For detailed examples and usage instructions, please refer to the [vignettes](https://loelschlaeger.de/ino/articles/) accompanying the package.
 
 ## Installation
 
-You can install the development version of {ino} from [GitHub](https://github.com/) with:
+You can install the released version from [CRAN](https://CRAN.R-project.org) with:
 
-```{r, eval = FALSE}
+```{r, install released, eval = FALSE}
+install.packages("ino")
+```
+
+And the development version from [GitHub](https://github.com/) with:
+
+```{r, install dev, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("loelschlaeger/ino")
 ```
 
+## Example
+
+The [Ackley function](https://en.wikipedia.org/wiki/Ackley_function) has multiple local minima and one global minimum in the origin. The optimization result depends on the initial value:
+
+```{r, ackley demo, message = FALSE}
+library("ino")
+Nop$new(f = f_ackley, npar = 2)$
+  set_optimizer(optimizer_nlm())$
+  optimize(initial = "random", runs = 100, verbose = FALSE)$
+  optima()
+```
+
+## Contact
+
+Have a question, found a bug, request a feature, want to contribute? [Please file an issue](https://github.com/loelschlaeger/ino/issues/new/choose).
