Add probit vignette (#25)

--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -60,6 +60,14 @@
   publisher = {Wiley Online Library}
 }
 
+@book{Genz:2009,
+  title={Computation of multivariate normal and t probabilities},
+  author={Genz, Alan and Bretz, Frank},
+  volume={195},
+  year={2009},
+  publisher={Springer Science \& Business Media}
+}
+
 @article{Haaijer:1998,
 	author    = {Haaijer, R. and Wedel, M. and Vriens, M. and Wansbeek, T.},
 	journal   = {Marketing Science},
