--- a/vignettes/example_probit.Rmd
+++ b/vignettes/example_probit.Rmd
@@ -62,11 +62,11 @@ We simulate choice data for $N = 100$ deciders at $T = 20$ choice occasions from
 
 ```{r, simulate data, eval = TRUE}
 N <- 100
-T <- 20
+Tp <- 20
 b <- c(1, -10)
 Omega <- matrix(c(0.2, 0.5, 0.5, 2), 2, 2)
 Sigma <- matrix(c(1, -0.5, 0.2, -0.5, 1, 0.2, 0.2, 0.2, 1), 3, 3)
-probit_data <- sim_mnp(N, T, J = 3, P = 2, b, Omega, Sigma, X, seed = 1)
+probit_data <- sim_mnp(N, Tp, J = 3, P = 2, b, Omega, Sigma, X, seed = 1)
 ```
 
 The `probit_data` object is a `data.frame` with the decider index `n`, the choice occasion index `t`, the choice `y`, and the choice characteristics `X`:
