--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/loelschlaeger/ino/branch/master/graph/badge.svg)](https://app.codecov.io/gh/loelschlaeger/ino?branch=master)
 <!-- badges: end -->
 
-The `{ino}` R package provides tools designed for the analysis of the initialization for numerical optimization. For detailed examples and usage instructions, please refer to the [vignettes](https://loelschlaeger.de/ino/articles/) accompanying the package.
+The `{ino}` R package provides tools for the analysis of the initialization for numerical optimization. For detailed examples and usage instructions, please refer to the [vignettes](https://loelschlaeger.de/ino/articles/) accompanying the package.
 
 ## Installation
 
@@ -41,7 +41,18 @@ devtools::install_github("loelschlaeger/ino")
 
 ## Example
 
-The [Ackley function](https://en.wikipedia.org/wiki/Ackley_function) has multiple local minima and one global minimum in the origin. The optimization result depends on the initial value:
+The [Ackley function](https://en.wikipedia.org/wiki/Ackley_function) has multiple local minima and one global minimum in the origin. 
+
+```{r, ackley function}
+f_ackley <- function(x) {
+  stopifnot(is.numeric(x), length(x) == 2)
+  -20 * exp(-0.2 * sqrt(0.5 * (x[1]^2 + x[2]^2))) -
+    exp(0.5 * (cos(2 * pi * x[1]) + cos(2 * pi * x[2]))) + exp(1) + 20
+}
+f_ackley(c(0, 0))
+```
+
+The optimization result depends on the initial value:
 
 ```{r, ackley demo, message = FALSE}
 library("ino")
