--- a/vignettes/example_probit.Rmd
+++ b/vignettes/example_probit.Rmd
@@ -1,10 +1,7 @@
 ---
 title: "Example: Probit Model"
-<<<<<<< HEAD
-=======
 description: >
   See the {ino} package in action for the probit likelihood optimization.
->>>>>>> master
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
@@ -21,25 +18,14 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.align = "center",
-<<<<<<< HEAD
-  fig.dim = c(8, 6), 
-  out.width = "75%",
-  eval = FALSE
-)
-# library("ino")
-devtools::load_all() # remove later
-options("ino_verbose" = TRUE) 
-```
-
-The probit model is a widely employed statistical tool for analyzing discrete choice behavior in various fields, including transportation [@Bolduc:1999; @Shin:2015] and marketing [@Allenby:1998; @Haaijer:1998; @Paap:2000]. The estimation of probit model parameters typically involves the numerical maximization of the likelihood function. However, this approach can be computationally expensive and may encounter problems in reaching the global optimum, especially when dealing with complex models. In this vignette, we utilize the `{ino}` package to investigate the influence of initialization on the numerical maximization of the probit likelihood function.
-=======
   fig.path = "figures/probit-",
   fig.dim = c(8, 6), 
   out.width = "75%",
   # all optimizations are pre-computed to save building time
   eval = FALSE
 )
-library("ino")
+# library("ino")
+devtools::load_all() # REMOVE!
 options("ino_verbose" = TRUE) 
 data("probit_ino")
 set.seed(1)
@@ -47,7 +33,6 @@ ggplot2::theme_set(ggplot2::theme_minimal())
 ```
 
 The probit model is a widely employed statistical tool for analyzing discrete choice behavior in various fields, including transportation [@Bolduc:1999; @Shin:2015] and marketing [@Allenby:1998; @Haaijer:1998; @Paap:2000]. The estimation of probit model parameters typically involves the numerical maximization of the likelihood function. However, this approach can be computationally expensive and may encounter problems in reaching the global optimum, especially when dealing with complex models. In this vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the `{ino}` `r utils::packageVersion("ino")` package.], we utilize the `{ino}` package to investigate the influence of initialization on the numerical maximization of the probit likelihood function.
->>>>>>> master
 
 ## Model formulation
 
@@ -65,7 +50,6 @@ The maximum likelihood estimate $\hat{\theta}$ is obtained by solving $$\hat{\th
 
 ## Data simulation and likelihood computation
 
-<<<<<<< HEAD
 The {ino} package provides the `sim_mnp()` function for simulating choice data from a probit model. To use this function, we first need to define a function `X()` that samples the matrix of choice characteristics for the decision maker $n$ at choice occasion $t$. The matrix must have the dimension $J \times P$, where $J$ is the number of available alternatives and $P$ the number of characteristics that describe each alternative.
 
 In our simulation, the choice setting consists of $J = 3$ alternatives that are described via $P = 2$ characteristics. The entries of the first column of $X_{nt}$ are drawn from the $\mathcal{N}(\mu = 10, \sigma = 3)$ distribution, and the entries of the second column from $\mathcal{N}(\mu = 0, \sigma = 0.3)$. This design mimics that choice covariates are usually observed on different scales.
@@ -85,21 +69,10 @@ X <- function(n, t) {
   rownames(covariates) <- c("beach", "cruise", "party")
   colnames(covariates) <- c("cost", "age_cruise", "age_party")
   return(covariates)
-=======
-The `{ino}` package provides the `sim_mnp()` function, which enables simulation of choice data from a probit model. Prior to utilizing this function, it is necessary to define the function `X(n, t)`, which generates a matrix representing the choice characteristics for decision maker $n$ at choice occasion $t$. The matrix should have dimensions of $J \times P$, where $J$ corresponds to the number of available alternatives, and $P$ indicates the number of characteristics describing each alternative.
-
-For our simulation, we have a choice setting with $J = 3$ alternatives, characterized by $P = 2$ attributes. The values in the first column of $X_{nt}$ are drawn from a normal distribution $\mathcal{N}(\mu = 10, \sigma = 3)$, while the values in the second column are drawn from $\mathcal{N}(\mu = 0, \sigma = 0.3)$. This design reflects the common situation of observing choice covariates on different scales.
-
-```{r, choice covariates, eval = TRUE}
-X <- function(n, t) {
-  J <- 3
-  cbind(stats::rnorm(J, mean = 10, sd = 3), stats::rnorm(J, mean = 0, sd = 0.3))
->>>>>>> master
 }
 X(n = 1, t = 1)
 ```
 
-<<<<<<< HEAD
 We simulate choice data for $N = 200$ deciders at $T = 20$ choice occasions from the probit model defined by the parameters $b = \begin{pmatrix} 1 & -10 \end{pmatrix}^\top$, $\Omega = \begin{pmatrix} 0.2 & 0.5 \\ 0.5 & 2 \end{pmatrix}$, and $\Sigma = \begin{pmatrix} 1 & -0.5 & 0.2 \\ -0.5 & 1 & 0.2 \\ 0.2 & 0.2 & 1 \end{pmatrix}$:
 
 ```{r, simulate data, eval = TRUE}
@@ -110,17 +83,6 @@ b <- c(1, -0.1, -0.8)
 Sigma <- matrix(c(1, -0.5, 0.2, -0.5, 1, 0.2, 0.2, 0.2, 1), 3, 3)
 Omega <- Sigma
 probit_data <- sim_mnp(N, T, J = 3, P = 3, b, Omega, Sigma, X, seed = 1)
-=======
-We simulate choice data for $N = 100$ deciders at $T = 20$ choice occasions from the probit model defined by the parameter values $b = \begin{pmatrix} 1 & -10 \end{pmatrix}^\top$, $\Omega = \begin{pmatrix} 0.2 & 0.5 \\ 0.5 & 2 \end{pmatrix}$, and $\Sigma = \begin{pmatrix} 1 & -0.5 & 0.2 \\ -0.5 & 1 & 0.2 \\ 0.2 & 0.2 & 1 \end{pmatrix}$:
-
-```{r, simulate data, eval = TRUE}
-N <- 100
-Tp <- 20
-b <- c(1, -10)
-Omega <- matrix(c(0.2, 0.5, 0.5, 2), 2, 2)
-Sigma <- matrix(c(1, -0.5, 0.2, -0.5, 1, 0.2, 0.2, 0.2, 1), 3, 3)
-probit_data <- sim_mnp(N, Tp, J = 3, P = 2, b, Omega, Sigma, X, seed = 1)
->>>>>>> master
 ```
 
 The `probit_data` object is a `data.frame` with the decider index `n`, the choice occasion index `t`, the choice `y`, and the choice characteristics `X`:
@@ -129,15 +91,6 @@ The `probit_data` object is a `data.frame` with the decider index `n`, the choic
 head(probit_data)
 ```
 
-<<<<<<< HEAD
-It has the attribute `true`, which provides the true and *identified* parameter values, i.e. the mean effects $b$ except for the first one, the elements $o$ of the lower-triangular Cholesky root of $\Omega$, and the elements $l$ of the lower-triangular Cholesky root of the differenced (with respect to alternative $J$) covariance matrix $\Sigma$:
-
-```{r, true parameter, eval = TRUE}
-(theta <- attr(probit_data, "true"))
-```
-
-The likelihood function is implemented as `f_ll_mnp()`:
-=======
 The `probit_data` object includes the attribute `true`, which contains the true and *identified* parameter values. These values consist of the mean effects $b$, excluding the first element, the elements $o$ of the lower-triangular Cholesky root of $\Omega$, and the elements $l$ of the lower-triangular Cholesky root of the differenced covariance matrix $\Sigma$ (with respect to alternative $J$):
 
 ```{r, true parameter, eval = TRUE}
@@ -145,26 +98,11 @@ round(theta <- attr(probit_data, "true"), 2)
 ```
 
 The probit likelihood function is implemented as `f_ll_mnp()` and can be evaluated by providing a parameter vector `theta` and a data set `probit_data`:
->>>>>>> master
 
 ```{r, likelihood evaluation, eval = TRUE}
 f_ll_mnp(theta = theta, data = probit_data)
 ```
 
-<<<<<<< HEAD
-## Setup in {ino}
-
-To analyze the outcome of the numerical likelihood optimization for the multinomial mixed probit model, we apply the {ino} package. We first define a `Nop` object by setting `f = f_ll_mnp`, the number of parameters to `npar = 7`, and `data = probit_data`. Then, we apply the `stats::nlm` optimizer with a limit of 1000 iterations. Since this optimizer minimizes the objective function instead of maximizing it, we set `neg = TRUE` to compute the negative log-likelihood value.
-
-```{r, define Nop, eval = TRUE}
-probit_ino <- Nop$new(f = f_ll_mnp, npar = length(theta), data = probit_data, neg = TRUE)$
-  set_optimizer(optimizer_nlm(iterlim = 1000))
-```
-
-We save the true parameter vector `theta` and use it later to evaluate whether the optimization has converged to the global optimum:
-
-```{r, set true parameter, eval = TRUE}
-=======
 ## Setup
 
 To analyze the outcome of the numerical likelihood optimization for the multinomial mixed probit model, we apply the `{ino}` package:
@@ -180,7 +118,6 @@ probit_ino <- Nop$new(f = f_ll_mnp, npar = 7, data = probit_data, neg = TRUE)$
 The true parameter vector `theta` is saved to assess the convergence of the optimization runs to the global optimum:
 
 ```{r, set true parameter}
->>>>>>> master
 probit_ino$true_parameter <- theta
 ```
 
@@ -192,59 +129,6 @@ print(probit_ino)
 
 ## Random initialization
 
-<<<<<<< HEAD
-We optimize `runs = 100` times using random initial values drawn from a standard normal distribution:
-
-```{r, optimize with random initial values}
-probit_ino$optimize(initial = "random", runs = 100, label = "random", ncores = 4)
-```
-
-## Initializing using estimates on a data subsample
-
-```{r, eval = TRUE}
-probit_ino$reduce("data", how = "random", proportion = 0.25)
-```
-
-```{r}
-probit_ino$optimize(initial = "random", runs = 100, label = "subset", ncores = 4)$
-  reset_argument("data")$
-  continue()
-```
-
-```{r, eval = TRUE}
-probit_ino <- ino::probit_ino
-
-random_initial <- lapply(probit_ino$results(which_run = "random"), `[[`, "initial") |>
-  do.call(what = rbind) |> sweep(2, probit_ino$true_parameter) |>
-  as.data.frame() |>
-  cbind(type = "random_initial")
-
-subset_initial <- lapply(
-  probit_ino$results(which_run = "subset", which_element = "previous_run"), 
-  `[[`, "previous_run.parameter"
-  ) |>
-  do.call(what = rbind) |> sweep(2, probit_ino$true_parameter) |>
-  as.data.frame() |>
-  cbind(type = "subset_initial")
-
-library(ggplot2)
-library(reshape2)
-
-melt(rbind(random_initial, subset_initial)) |> 
-  ggplot(aes(x = variable, y = value)) +
-  geom_point(aes(color = type), position = "jitter") +
-  labs(
-    y = "difference to true parameter"
-  ) +
-  scale_x_discrete(
-    labels = c("b.2", "o.11", "o.21", "o.22", "l.11", "l.21", "l.22"),
-    name = "parameter"
-  ) +
-  scale_y_continuous(
-    name = "difference to true parameter",
-    limits = c(-5, 5)
-  )
-=======
 As a benchmark, we optimize `runs = 100` times using random initial values drawn from a standard normal distribution:
 
 ```{r, optimize with random initial values}
@@ -317,7 +201,6 @@ summary(probit_ino, which_element = c("seconds", "label")) %>%
     sd_seconds = sd(seconds, na.rm = TRUE)
   ) %>%
   arrange(mean_seconds)
->>>>>>> master
 ```
 	
 ## References
